--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "animate.css": "^4.1.1",
+    "cloudinary": "^2.5.1",
     "framer-motion": "^12.0.3",
     "next": "15.1.6",
     "react": "19.0.0",
